--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
     <div class="container-fluid">
 
       <div id="nav-scroller" class="navbar-header">
-        <a href="#" class="navbar-brand">Hotel Site</a>
+        <a href="home.html" class="navbar-brand">Hotel Site</a>
         <button id="nav-toggle-button" class="navbar-toggle" data-toggle="collapse" data-target="#nav-links">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -109,7 +109,7 @@
     <div id="paris-hotel1" class="row paris">
       <div class="col-xs-12 col-md-8 col-md-offset-2 hotel" data-toggle="modal">
         <div class="col-xs-12 text-center">
-          <h3 class="hotel-name">Chez Sandrine</h3>
+          <h2 class="hotel-name">Chez Sandrine</h2>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-4 text-center">
           <img class="hotel-img" src="img/hotel1_comp.jpg">
@@ -127,7 +127,7 @@
     <div id="paris-hotel2" class="row paris">
       <div class="col-xs-12 col-md-8 col-md-offset-2 hotel" data-toggle="modal">
         <div class="col-xs-12 text-center">
-          <h3 class="hotel-name">Hotel Hubris</h3>
+          <h2 class="hotel-name">Hotel Hubris</h2>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-4 text-center">
           <img class="hotel-img" src="img/hotel1_comp.jpg">
@@ -145,14 +145,14 @@
     <div id="paris-hotel3" class="row paris">
       <div class="col-xs-12 col-md-8 col-md-offset-2 hotel" data-toggle="modal">
         <div class="col-xs-12 text-center">
-          <h3 class="hotel-name">Le Chateau à Bobigny</h3>
+          <h2 class="hotel-name">Le Chateau à Bobigny</h2>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-4 text-center">
           <img class="hotel-img" src="img/hotel1_comp.jpg">
         </div>
         <div class="col-xs-12 col-sm-12 col-md-8 text-center">
           <p class="hotel-description pull-left">A diamond in the rough.  If you need a nice place to stay near Paris and you are on a budget, this hotel is for you.</p>
-          <p class="modal-description hidden">Located in the heart of Bobigny, just north of Paris, this hotel gives you easy access to the city while providing an affordable way to spend your vacation.</p>
+          <p class="modal-description hidden">Located in the center of Bobigny, just north of Paris, this hotel gives you easy access to the city while providing an affordable way to spend your vacation.</p>
         </div>
         <div class="col-xs-10 col-xs-offset-1">
           <p class="hotel-price-p pull-right"><span class="hotel-price">$70</span> per night</p>
@@ -163,17 +163,53 @@
     <div id="london-hotel1" class="row london">
       <div class="col-xs-12 col-md-8 col-md-offset-2 hotel" data-toggle="modal">
         <div class="col-xs-12 text-center">
-          <h3 class="hotel-name">The Chipper Hotel</h3>
+          <h2 class="hotel-name">The Chipper Hotel</h2>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-4 text-center">
           <img class="hotel-img" src="img/hotel1_comp.jpg">
         </div>
         <div class="col-xs-12 col-sm-12 col-md-8 text-center">
           <p class="hotel-description pull-left">This hotel is right in the heart of the city!</p>
-          <p class="modal-description hidden"></p>
+          <p class="modal-description hidden">We have all the amenities you want, from cable television to mini fridges in every room.  We are conveniently located near bus and underground stations, allowing you to have easy access to all of London.</p>
         </div>
         <div class="col-xs-10 col-xs-offset-1">
           <p class="hotel-price-p pull-right"><span class="hotel-price">$125</span> per night</p>
+        </div>
+      </div>
+    </div>
+
+    <div id="london-hotel2" class="row london">
+      <div class="col-xs-12 col-md-8 col-md-offset-2 hotel" data-toggle="modal">
+        <div class="col-xs-12 text-center">
+          <h2 class="hotel-name">Ralphie's Inn</h2>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-4 text-center">
+          <img class="hotel-img" src="img/hotel1_comp.jpg">
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-8 text-center">
+          <p class="hotel-description pull-left">We are in Greenford, just west of London.  Come in for a pint, play some darts, and stay as long as you like.</p>
+          <p class="modal-description hidden">Fresh linen sheets, small pub ambience, good company, and open 24/7!  Make your reservation today.</p>
+        </div>
+        <div class="col-xs-10 col-xs-offset-1">
+          <p class="hotel-price-p pull-right"><span class="hotel-price">$90</span> per night</p>
+        </div>
+      </div>
+    </div>  
+
+    <div id="london-hotel3" class="row london">
+      <div class="col-xs-12 col-md-8 col-md-offset-2 hotel" data-toggle="modal">
+        <div class="col-xs-12 text-center">
+          <h2 class="hotel-name">The Palace</h2>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-4 text-center">
+          <img class="hotel-img" src="img/hotel1_comp.jpg">
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-8 text-center">
+          <p class="hotel-description pull-left">This magestic hotel is reminiscent of a palace, giving visitors unparalled luxuries at their fingertips during their stay.</p>
+          <p class="modal-description hidden">We offer comfort like no other.  Two large heated pools, whirlpool, spa and even built-in shops and coffee house.</p>
+        </div>
+        <div class="col-xs-10 col-xs-offset-1">
+          <p class="hotel-price-p pull-right"><span class="hotel-price">$650</span> per night</p>
         </div>
       </div>
     </div>    
@@ -200,7 +236,7 @@
             </div>
             <div class="row">
               <div class="col-xs-6 text-center">
-                <p class="modal-hotel-price"><span id="modal-price">$120</span> per night</p>
+                <p class="modal-hotel-price">Starting at <span id="modal-price"></span> per night</p>
               </div>
               <div class="col-xs-6 text-center">
                 <p class="modal-hotel-reviews">See Reviews</p>
