--- a/home.html
+++ b/home.html
@@ -121,7 +121,18 @@
         <div class="col-xs-10 col-xs-offset-1">
           <p class="hotel-price-p pull-right"><span class="hotel-price">$100</span> per night</p>
         </div>
-      </div>
+      </div>            
+      <div class="row user-review hidden">
+        <div class="col-xs-12">
+           <p class="user">Tom wrote:</p>
+        </div>
+        <div class="col-xs-12">
+          <p class="user-review-description">I used to love coming here before work took me far, far away.  Good drink, good company, and a great view overlooking the Seine river.  Now that I'm back in the area, I've been trying to bring the family here whenever I can.</p>
+        </div>
+        <div class="col-xs-12">
+          <p class="user-rating">*****</p>
+        </div>
+     </div>
     </div>
 
     <div id="paris-hotel2" class="row paris listing">
@@ -243,23 +254,7 @@
               </div>
             </div>
 
-            <div class='reviews'>
-              <hr />
-              
-              <div class="row user-review">
-                <div class="col-xs-12">
-                  <p class="user">Tom wrote:</p>
-                </div>
-                <div class="col-xs-12">
-                  <p class="user-review">I used to love coming here before work took me far, far away.  Good drink, good company, and a great view overlooking the Seine river.  Now that I'm back in the area, I've been trying to bring the family here whenever I can.</p>
-                </div>
-                <div class="col-xs-12">
-                  <p class="user-rating">*****</p>
-                </div>
-              </div>
-              
-              <hr />
-            </div>
+            <div id='modal-reviews'></div>
 
           </div>
           <div class="modal-footer">
